@@ -17,6 +17,7 @@ Version 1.4.0dev1
   * preview auto scroll
   * fixing positing in preview only mode
   * preview/editor/both with shortcuts and store in cache
+  * edited file change time check
 
 Version 1.3.0 - 16.1.2018 7:00
 
